Adding behaviors to the Hosts view, which requires e2e tests.
- Moved to Grunt 0.4.
	- Renamed Gruntfile, changed package.json dependencies.
- Added Add and Remove buttons in Host view.
	- Added method in deployman service, and tests.
	- Added e2e tests for the component.
- Added e2e tests runner.
	- Added child_process tasks to run successfully.
	- Other minor helpers.

--- a/src/client/pages/hosts/view.jade
+++ b/src/client/pages/hosts/view.jade
@@ -8,6 +8,7 @@
 				th Hostname
 				th IP
 				th MAC
+				th
 			tr(ng:repeat="host in hosts")
 				td
 					inline(entity="host", property="hostname")
@@ -15,3 +16,14 @@
 					inline(entity="host", property="ip")
 				td
 					inline(entity="host", property="mac")
+				td
+					a.remove(ng:click="host._destroy()")
+						i.icon-minus
+			tr
+				td
+					a.create(ng:click="create()")
+						i.icon-plus
+						| New Host
+				td
+				td
+				td
