Fixed spelling of angular.

--- a/src/client/index.jade
+++ b/src/client/index.jade
@@ -23,7 +23,7 @@ html(lang="en")
 		script(src="vendors/jefri-stores/lib/jefri-stores.min.js")
 
 		//- Load angular last, so all the helper dependencies are available.s
-		script(src="vendors/AngularJS/angular.js")
+		script(src="vendors/angular/angular.js")
 		script(src="vendors/angular-ui/build/angular-ui.min.js")
 		script(src="vendors/jefri-angular/build/dist/jefri-angular.min.js")
 
